--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,13 @@
 /node_modules
 /.pnp
 .pnp.js
+package-lock.json
 
 # testing
 /coverage
 
 # production
-/build
+# /build
 
 # misc
 .DS_Store
@@ -33,7 +34,7 @@ yarn-error.log*
 /coverage
 
 # production
-/build
+# /build
 
 # misc
 .DS_Store
