--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tictactoe",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "animate.css": "^3.7.2",
     "prop-types": "^15.7.2",
